# MLOpsAssignment

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/: .gitignore  bronze.dvc  gold.dvc  silver.dvc
scripts/: run_pipeline.sh
src/: build_bronze_batch.py  build_gold.py  build_silver.py  config.py  data_processing.py  data_validation.py  ingest_batch.py  run_data_pipeline.py
tests/: test_data_quality.py
