[project]
name = "mlopsassignment"
version = "0.1.1"
description = "Dependencies for ModelOps assignment"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dvc>=3.66.1",
    "pandas>=2.2,<3",
    "pandera>=0.29.0",
    "prefect>=3.6.16",
    "pyarrow>=14,<22",
    "scikit-learn>=1.5.0",
    "mlflow>=2.20,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
